cleaner css for the survey form, and fixing line breaks in hmtl

--- a/survey form/style.css
+++ b/survey form/style.css
@@ -1,73 +1,28 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    color: white;
+}
 body{
-  margin: 0px;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://images.unsplash.com/photo-1587620962725-abab7fe55159?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8ZGV2ZWxvcGVyfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-}
-header{
-  text-align: center;
-  color: white;
-  margin-top: 40px;
-  margin-bottom: 40px;
-}
-header h1{
-  font-size: calc(1vw + 1.9rem);
-}
-main{
-  font-size: calc(1vw + 0.8rem);
-  max-width: 720px;
-  margin: auto;
-}
-main form{
-  padding-top: 10px;
-  background-color: rgba(27, 27, 50,0.5);
-  margin: auto;
-  padding-bottom: 20px;
-  color: white
-}
-main form div{
-  margin: 25px;
-  margin-left: 40px;
-  margin-right: 40px;
-}
-main form input{
-  margin-top: 12px;
-}
-main form .myInput{
-  font-size: calc(1vw + 0.085rem);
-  width: 100%;
-  height: 40px;
-  box-sizing: border-box;
-  border-radius: 5px;
-}
-main form input[type='checkbox'] , main form input[type='radio']{
-  transform: scale(1.7);
-  margin-right: 8px;
-}
-main form textarea{
-  font-size: calc(1vw + 0.085rem);
-  width: 100%;
-  box-sizing: border-box;
-  border-radius: 5px;
-  margin-top: 5px;
-}
-main form p{
-  margin-bottom: 8px;
-}
-main form input[type='submit']{
-  color: white;
-  background-color: hsl(120,50%,50%);
-}
-main form input[type='submit']:hover{
-  background-color: hsl(120,60%,30%);
-}
-
-@media (max-width: 1366px){
+    margin: 0px;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://images.unsplash.com/photo-1587620962725-abab7fe55159?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8ZGV2ZWxvcGVyfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+  }
+  header{
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
   main{
-      font-size: calc(1vw + 1rem);
+    background-color: rgba(27, 27, 50,0.5);
+    padding-top: 20px;
+    padding-bottom: 20px;
+    max-width: 720px;
+    margin: auto;
   }
-  main form .myInput , main form textarea{
-      font-size: 1rem;
+  form{
+    padding: 20px;
   }
-}
